<?xml version="1.0"?>
<package>

  <name>sot-doc</name>
  <version>1.1.0</version>
  <description>
      Documentation entry point for the Stack-Of-Tasks
  </description>
  <maintainer email="guilhem.saurel@laas.fr">Guilhem Saurel</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
